Story #14600: upgrade to Spring Boot 3.5