@@ -42,11 +42,11 @@ import fr.gouv.vitamui.commons.mongo.converter.OperationConverter;
 import fr.gouv.vitamui.commons.mongo.dao.OperationRepository;
 import fr.gouv.vitamui.commons.mongo.domain.Operation;
 import fr.gouv.vitamui.commons.mongo.repository.VitamUIRepository;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.Validation;
+import jakarta.validation.Validator;
+import jakarta.validation.ValidatorFactory;
 
-import javax.validation.ConstraintViolation;
-import javax.validation.Validation;
-import javax.validation.Validator;
-import javax.validation.ValidatorFactory;
 import java.time.OffsetDateTime;
 import java.util.HashMap;
 import java.util.Map;
@@ -97,7 +97,7 @@ public class OperationService extends VitamUICrudService<OperationDto, Operation
                 "Unable to validate the operation: " +
                 violations
                     .stream()
-                    .map(violation -> String.format("%s %s", violation.getPropertyPath(), violation.getMessage()))
+                    .map(violation -> "%s %s".formatted(violation.getPropertyPath(), violation.getMessage()))
                     .collect(Collectors.joining(","))
             );
         }
